--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,12 @@
 repos:
+  - repo: local
+    hooks:
+    -   id: requirements
+        name: requirements
+        entry: bash -c 'pip freeze > requirements.txt; git add requirements.txt'
+        language: system
+        pass_filenames: false
+        stages: [commit]
   - repo: https://github.com/psf/black
     rev: 21.7b0
     hooks:
